--- a/.github/workflows/android_test.yml
+++ b/.github/workflows/android_test.yml
@@ -18,6 +18,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
+      - name: kill adb
+        run: |
+          adb kill-server
+          adb start-server
+
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
