--- a/.github/workflows/min_version_test.yml
+++ b/.github/workflows/min_version_test.yml
@@ -13,20 +13,20 @@ jobs:
     timeout-minutes: 30
 
     steps:
-        - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-        - uses: actions/setup-java@v3
-          with:
-            distribution: 'adopt'
-            java-version: '11'
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '11'
 
-        - uses: subosito/flutter-action@v2
-          with:
-            flutter-version: '2.0.0'
+      - uses: subosito/flutter-action@1e6ee87cb840500837bcd50a667fb28815d8e310 # pin@v2
+        with:
+          flutter-version: '2.0.0'
 
-        - name: Build
-          run: |
-            cd min_version_test
-            flutter pub get
-            flutter build ios --no-codesign
-            flutter build appbundle
+      - name: Build
+        run: |
+          cd min_version_test
+          flutter pub get
+          flutter build ios --no-codesign
+          flutter build appbundle
