setup gradle wrapper

--- a/.github/workflows/android_test.yml
+++ b/.github/workflows/android_test.yml
@@ -23,8 +23,8 @@ jobs:
           adb kill-server
           adb start-server
 
-      - name: verify dir content
-        run: ls -a
+      - name: setup gradle wrapper
+        run: gradle wrapper
 
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
