--- a/.github/workflows/android_test.yml
+++ b/.github/workflows/android_test.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         api-level: [21]
+        sdk: ['stable']
     steps:
       - name: checkout
         uses: actions/checkout@v3
