fix: rename perf-test-app-with-sentry bcs we had to add "with" to register the ios profile

--- a/metrics/metrics-ios.yml
+++ b/metrics/metrics-ios.yml
@@ -1,7 +1,7 @@
 apps:
   - name: io.sentry.dart.perfTestAppPlain
     path: test-app-plain.ipa
-  - name: io.sentry.dart.perfTestAppSentry
+  - name: io.sentry.dart.perfTestAppWithSentry
     path: test-app-sentry.ipa
 
 startupTimeTest:
