--- a/metrics/metrics-android.yml
+++ b/metrics/metrics-android.yml
@@ -2,9 +2,9 @@ apps:
   - name: io.sentry.dart.perf_test_app_plain
     activity: MainActivity
     path: perf-test-app-plain/build/app/outputs/apk/release/app-arm64-v8a-release.apk
-  - name: io.sentry.dart.perf_test_app_sentry
+  - name: io.sentry.dart.perf_test_app_with_sentry
     activity: MainActivity
-    path: perf-test-app-sentry/build/app/outputs/apk/release/app-arm64-v8a-release.apk
+    path: perf-test-app-with-sentry/build/app/outputs/apk/release/app-arm64-v8a-release.apk
 
 startupTimeTest:
   runs: 50
