--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -43,14 +43,11 @@ jobs:
         working-directory: ./flutter/example/android
         run: gradle wrapper
 
-      - name: run apk on android emulator
+      - name: run apk on android emulator & run integration test
         uses: reactivecircus/android-emulator-runner@v2
         with:
           working-directory: ./flutter/example/android
           api-level: ${{ matrix.api-level }}
           arch: x86_64
           profile: Nexus 6
-          script: ./gradlew installDebug
-
-      - name: run flutter integration test
-        run: flutter test integration_test/launch_test.dart
+          script: ./gradlew installDebug & flutter test integration_test/launch_test.dart
