run parent dir test

--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -45,4 +45,4 @@ jobs:
           api-level: ${{ matrix.api-level }}
           arch: x86_64
           profile: Nexus 6
-          script: ./gradlew installDebug & flutter test integration_test/launch_test.dart
+          script: ./gradlew installDebug & flutter test ../integration_test/launch_test.dart
