--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -41,4 +41,4 @@ jobs:
           api-level: ${{ matrix.api-level }}
           arch: x86_64
           profile: Nexus 6
-          script: ls -a & flutter test integration_test/launch_test.dart
+          script: flutter test integration_test/launch_test.dart
