--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -25,3 +25,11 @@ jobs:
       name: Cocoa SDK
     secrets:
       api-token: ${{ secrets.CI_DEPLOY_KEY }}
+
+  metrics-flutter:
+    uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
+    with:
+      path: metrics/flutter.properties
+      name: Flutter SDK (metrics)
+    secrets:
+      api-token: ${{ secrets.CI_DEPLOY_KEY }}
