--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -46,7 +46,7 @@ jobs:
         uses: futureware-tech/simulator-action@v1
         with:
           model: 'iPhone 8'
-          os_version: '14.0.0'
+          os_version: '15.2' #https://github.com/futureware-tech/simulator-action/wiki/Devices-macos-latest
 
       - name: run ios integration test
         run: flutter test integration_test/launch_test.dart
