--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -10,18 +10,20 @@ on:
 
 jobs:
   metrics:
-    runs-on: macos-latest
+    runs-on: ${{ matrix.host }}
     strategy:
-      # We want that the matrix keeps running, default is to cancel them if it fails.
+      # We want that the matrix keeps running, default is to cancel all jobs if a single fails.
       fail-fast: false
       matrix:
         include:
           - platform: ios
             name: iOS
             appPlain: test-app-plain.ipa
+            host: macos-latest
           - platform: android
             name: Android
             appPlain: metrics/perf-test-app-plain/build/app/outputs/apk/release/app-arm64-v8a-release.apk
+            host: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
