enable android test

--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -33,14 +33,14 @@ jobs:
       - name: flutter pub get
         run: flutter pub get
 
-      # - name: launch android emulator & run android integration test
-      #   uses: reactivecircus/android-emulator-runner@v2
-      #   with:
-      #     working-directory: ./flutter/example
-      #     api-level: 21
-      #     arch: x86_64
-      #     profile: Nexus 6
-      #     script: flutter test integration_test/launch_test.dart
+      - name: launch android emulator & run android integration test
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          working-directory: ./flutter/example
+          api-level: 21
+          arch: x86_64
+          profile: Nexus 6
+          script: flutter test integration_test/launch_test.dart
 
       - name: launch ios emulator
         uses: futureware-tech/simulator-action@v1
