--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -32,8 +32,8 @@ jobs:
       - uses: actions/checkout@v3
 
       # Let's stick to an explicit version and update manually because a version change may affect results.
-      # If it updated implicitly, it could confuse people to think the change is actually caused by the PR.
-      # Instead, we use updater (update-deps.yml) to create PRs for explicit Flutter SDK update.
+      # If it would update implicitly it could confuse people to think the change is actually caused by the PR.
+      # Instead, we use Updater (update-deps.yml) to create PRs for explicit Flutter SDK update.
       - name: Read configured Flutter SDK version
         id: conf
         run: |
