ci: don't add changelog entry for metrics Flutter SDK updates

--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -31,5 +31,6 @@ jobs:
     with:
       path: metrics/flutter.properties
       name: Flutter SDK (metrics)
+      changelog-entry: false
     secrets:
       api-token: ${{ secrets.CI_DEPLOY_KEY }}
