--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -7,13 +7,13 @@ on:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: macos-10.15 # Supports iOS simulator 14.4
     defaults:
       run:
         working-directory: ./flutter/example
     strategy:
       matrix:
-        sdk: ['stable']
+        sdk: ['stable', 'beta']
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -33,6 +33,14 @@ jobs:
       - name: flutter pub get
         run: flutter pub get
 
+      - name: launch ios emulator
+        uses: futureware-tech/simulator-action@v1
+        with:
+          os_version: '14.0'
+
+      - name: run ios integration test
+        run: flutter test integration_test/launch_test.dart
+
       - name: launch android emulator & run android integration test
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -42,11 +50,4 @@ jobs:
           profile: Nexus 6
           script: flutter test integration_test/launch_test.dart
 
-      - name: launch ios emulator
-        uses: futureware-tech/simulator-action@v1
-        with:
-          model: 'iPhone 8'
-          os_version: '15.2' #https://github.com/futureware-tech/simulator-action/wiki/Devices-macos-latest
 
-      - name: run ios integration test
-        run: flutter test integration_test/launch_test.dart
