--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    runs-on: macos-10.15 # Supports iOS simulator 14.4
+    runs-on: macos-latest
     defaults:
       run:
         working-directory: ./flutter/example
@@ -37,7 +37,7 @@ jobs:
         uses: futureware-tech/simulator-action@v1
         with:
           device: 'iPhone 8'
-          os_version: '14.4'
+          os_version: '15.2'
 
       - name: run ios integration test
         run: flutter test integration_test/launch_test.dart
