--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: macos-10.15
     defaults:
       run:
         working-directory: ./flutter/example
@@ -36,8 +36,8 @@ jobs:
       - name: launch ios emulator
         uses: futureware-tech/simulator-action@v1
         with:
-          device: 'iPhone 8'
-          os_version: '15.2'
+          model: 'iPhone 8'
+          os_version: '14.4'
 
       - name: run ios integration test
         run: flutter test integration_test/launch_test.dart
