--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -34,7 +34,7 @@ jobs:
         run: flutter pub get
 
       - name: launch android emulator & run android integration test
-        uses: reactivecircus/android-emulator-runner@v2
+        uses: reactivecircus/android-emulator-runner@d7b53ddc6e44254e1f4cf4a6ad67345837027a66
         with:
           working-directory: ./flutter/example
           api-level: 21
@@ -43,7 +43,7 @@ jobs:
           script: flutter test integration_test/launch_test.dart
 
       - name: launch ios emulator
-        uses: futureware-tech/simulator-action@v1
+        uses: futureware-tech/simulator-action@3899fc55d5bf1b24285a746651728263187ce9f5
         with:
           model: 'iPhone 8'
           os_version: '15.2'
