--- a/.github/workflows/flutter_integration_test.yml
+++ b/.github/workflows/flutter_integration_test.yml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'adopt'
           java-version: '8'
 
-      - uses: subosito/flutter-action@v2
+      - uses: subosito/flutter-action@1e6ee87cb840500837bcd50a667fb28815d8e310 # pin@v2
         with:
           channel: ${{ matrix.sdk }}
 
@@ -34,7 +34,7 @@ jobs:
         run: flutter pub get
 
       - name: launch android emulator & run android integration test
-        uses: reactivecircus/android-emulator-runner@d7b53ddc6e44254e1f4cf4a6ad67345837027a66
+        uses: reactivecircus/android-emulator-runner@d7b53ddc6e44254e1f4cf4a6ad67345837027a66 #pin@v2.26.0
         with:
           working-directory: ./flutter/example
           api-level: 21
@@ -43,7 +43,7 @@ jobs:
           script: flutter test integration_test/launch_test.dart
 
       - name: launch ios emulator
-        uses: futureware-tech/simulator-action@3899fc55d5bf1b24285a746651728263187ce9f5
+        uses: futureware-tech/simulator-action@ee05c113b79f056b47f354d7b313555f5491e158 #pin@v2
         with:
           model: 'iPhone 8'
           os_version: '15.2'
