--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -16,11 +16,18 @@ dependencies:
   stack_trace: ^1.10.0
   uuid: ^3.0.0
   intl: ^0.17.0
+  process: ^4.2.4
+  file: ^6.1.4
+  crypto: ^3.0.2
+  convert: ^3.0.2
+  injector: ^2.0.0
+  ansicolor: ^2.0.1
+  system_info2: ^2.0.3
+  yaml: ^3.1.0
 
 dev_dependencies:
   mockito: ^5.1.0
   lints: ^2.0.0
   test: ^1.21.1
-  yaml: ^3.1.0 # needed for version match (code and pubspec)
   collection: ^1.16.0
   coverage: ^1.3.0
