--- a/min_version_test/pubspec.yaml
+++ b/min_version_test/pubspec.yaml
@@ -30,6 +30,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  sentry:
+  sentry_flutter:
+  sentry_dio:
+  sentry_logging:
+  dio: ^4.0.0
+  logging: ^1.0.2
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+dependency_overrides:
   flutter:
     sdk: flutter
   sentry:
@@ -40,12 +52,6 @@ dependencies:
     path: ../dio
   sentry_logging:
     path: ../logging
-  dio: ^4.0.0
-  logging: ^1.0.2
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
