--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -70,39 +70,6 @@ jobs:
           min_coverage: 85
 
   analyze:
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    defaults:
-      run:
-        working-directory: ./dart
-    steps:
-      - uses: dart-lang/setup-dart@6a218f2413a3e78e9087f638a238f6b40893203d # pin@v1
-        with:
-          sdk: stable
-      - uses: actions/checkout@v3
-      - run: |
-          dart pub get
-          dart analyze --fatal-infos
-          dart format --set-exit-if-changed ./
-
-  package-analysis:
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    steps:
-      - uses: actions/checkout@v3
-      - uses: axel-op/dart-package-analyzer@7a6c3c66bce78d82b729a1ffef2d9458fde6c8d2 # pin@v3
-        id: analysis
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          relativePath: dart/
-      - name: Check scores
-        env:
-          TOTAL: ${{ steps.analysis.outputs.total }}
-          TOTAL_MAX: ${{ steps.analysis.outputs.total_max }}
-        run: |
-          PERCENTAGE=$(( $TOTAL * 100 / $TOTAL_MAX ))
-          if (( $PERCENTAGE < 90 ))
-          then
-            echo Score too low!
-            exit 1
-          fi
+    uses: ./.github/workflows/analyze.yml
+    with:
+      package: dart
