--- a/.github/workflows/web-example-ghpages.yml
+++ b/.github/workflows/web-example-ghpages.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           workingDir: flutter/example
           customArgs: --source-maps
+          webRenderer: canvaskit
 
       - name: Upload source maps
         run: |
