--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -15,6 +15,14 @@ on:
         default: 100
 
 jobs:
+  cancel-previous-workflow:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@b173b6ec0100793626c2d9e6b90435061f4fc3e5 # pin@0.11.0
+        with:
+          access_token: ${{ github.token }}
+
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 20
