--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -24,6 +24,10 @@ jobs:
           access_token: ${{ github.token }}
 
   analyze:
+    # `invertase/github-action-dart-analyzer` is using `flutter pub upgrade` instead of `get`,
+    # which ignores pubspec.yaml `dependency_overrides`. Because of that, all `release/*` branches are failing,
+    # because the package cannot find the "about to be released" version of our sentry-dart package that it depends on.
+    if: ${{ !startsWith(github.ref, 'refs/heads/release/') && inputs.panaThreshold > 0 }}  
     runs-on: ubuntu-latest
     timeout-minutes: 20
     defaults:
