enha: Flutter min version test (#1061)

--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
 dev_dependencies:
   pedantic: ^1.11.1
   sentry_dart_plugin: ^1.0.0-beta.1
+  integration_test:
+    sdk: flutter
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
