--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -15,15 +15,15 @@ dependencies:
   sentry_flutter:
   sentry_dio:
   sentry_logging:
-  universal_platform: ^1.0.0-nullsafety
+  universal_platform: ^1.0.0
   feedback: ^2.0.0
   provider: ^6.0.0
   dio: ^4.0.0
-  logging: ^1.0.2
+  logging: ^1.0.0
   package_info_plus: ^3.0.0
 
 dev_dependencies:
-  pedantic: ^1.11.1
+  flutter_lints: ^2.0.0
   sentry_dart_plugin: ^1.0.0-beta.1
   integration_test:
     sdk: flutter
