--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -100,7 +100,7 @@ jobs:
 
       #   remove comment after https://github.com/codecov/codecov-action/issues/600
       - uses: codecov/codecov-action@d9f34f8cd5cb3b3eb79b3e4b5dae3a16df499a70 # pin@v3
-        if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux'
+        if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'android'
         with:
           name: sentry_flutter
           file: ./flutter/coverage/lcov.info
