--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -103,11 +103,11 @@ jobs:
 
         # use codecov/codecov-action after this https://github.com/codecov/codecov-action/issues/600
       - name: Upload coverage to Codecov
-        if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux'
+        if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux' && env.CODECOV_TOKEN != null
         run: |
           curl -Os https://uploader.codecov.io/linux/latest/codecov
           chmod +x codecov
-          ./codecov -t ${CODECOV_TOKEN} -n sentry_flutter -f ./flutter/coverage/lcov.info
+          ./codecov -t env.CODECOV_TOKEN -n sentry_flutter -f ./flutter/coverage/lcov.info
 
       - uses: VeryGoodOpenSource/very_good_coverage@84e5b54ab888644554e5573dca87d7f76dec9fb3 # pin@v2.0.0
         if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux'
