--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -9,9 +9,6 @@ on:
       - 'logging/**'
       - 'dio/**'
 
-env:
-  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
 jobs:
   cancel-previous-workflow:
     runs-on: ubuntu-latest
@@ -103,9 +100,11 @@ jobs:
 
         # use codecov/codecov-action after this https://github.com/codecov/codecov-action/issues/600
       - name: Upload coverage to Codecov
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux' && env.CODECOV_TOKEN != null
         run: |
-          curl -Os https://uploader.codecov.io/linux/latest/codecov
+          curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
           ./codecov -t env.CODECOV_TOKEN -n sentry_flutter -f ./flutter/coverage/lcov.info
 
