--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -98,15 +98,13 @@ jobs:
           cd flutter
           flutter test --coverage --test-randomize-ordering-seed=random
 
-        # use codecov/codecov-action after this https://github.com/codecov/codecov-action/issues/600
-      - name: Upload coverage to Codecov
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux' && env.CODECOV_TOKEN != null
-        run: |
-          curl -Os https://uploader.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          ./codecov -t env.CODECOV_TOKEN -n sentry_flutter -f ./flutter/coverage/lcov.info
+      #   remove comment after https://github.com/codecov/codecov-action/issues/600
+      # - uses: codecov/codecov-action@v2
+      #   if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux'
+      #   with:
+      #     name: sentry_flutter
+      #     file: ./flutter/coverage/lcov.info
+      # or
 
       - uses: VeryGoodOpenSource/very_good_coverage@84e5b54ab888644554e5573dca87d7f76dec9fb3 # pin@v2.0.0
         if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux'
